<resources>
    <string name="app_name">极简天气</string>
    <string name="app_version">版本号：</string>
    <string name="splash_content">background</string>
    <string name="app_copyright">Copyright@2019</string>

    <string name="splash_content_title_1">极</string>
    <string name="splash_content_title_2">简</string>
    <string name="splash_content_title_3">天</string>
    <string name="splash_content_title_4">气</string>

    <string name="main_dialog_title">温馨提示：</string>
    <string name="main_dialog_content" >正在加载城市列表…</string>

    <string name="menu_local_city" >我的城市</string>
    <string name="menu_care" >特别关心</string>
    <string name="menu_change_city" >切换城市</string>
    <string name="menu_find_city" >查找城市</string>
    <string name="menu_about" >关于软件</string>

    <string name="find_edit" >请输入所需查找的城市</string>
    <string name="find_error_content" >无搜索结果</string>
    <string name="find_error_toast" >未查询到该城市的天气信息</string>
    <string name="find_local_error_toast" >未查询到当前城市的天气信息</string>
    <string name="success_add" >已添加至特别关心</string>

    <string name="care_no_city_list" >暂无城市哦o(╥﹏╥)o</string>

    <string name="share_wechat_dialog">分享至：</string>
    <string name="share_wechat_friend">微信好友</string>
    <string name="share_wechat_timeline">朋友圈</string>
    <string name="share_wechat_close">关闭</string>
    <string name="share_error">未安装微信，无法分享</string>
    <string name="share_success">分享成功</string>

    <string name="about_upgrade_text">检查更新</string>

    <string name="dialog_title">温馨提示：</string>
</resources>
