<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_content" />

    <TextView
        android:id="@+id/splash_tv_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:text="@string/splash_content_title_1"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/splash_tv_2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        android:text="@string/splash_content_title_2"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/splash_tv_3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="220dp"
        android:text="@string/splash_content_title_3"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/splash_tv_4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:text="@string/splash_content_title_4"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/splash_tv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_content_title_5"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

</android.support.constraint.ConstraintLayout>
